# ems

./: .gitignore  README.md
backend/: .env.dist  .flake8  pyproject.toml  requirements.txt  requirements_dev.txt
backend/company/: admin.py  models.py  serializers.py  tests.py  views.py
backend/company/migrations/: 0001_initial.py  0002_alter_company_options.py
backend/core/: authentication.py  permissions.py
backend/department/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  views.py
backend/department/migrations/: 0001_initial.py
backend/employee/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/employee/migrations/: 0001_initial.py  0002_alter_employee_email_alter_employee_hired_on_and_more.py  0003_alter_employee_email_alter_employee_status.py
backend/ems/: asgi.py  settings.py  urls.py  wsgi.py
backend/user_account/: models.py  serializers.py  services.py  urls.py  views.py
backend/user_account/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_managers.py  0004_alter_user_managers.py  0005_alter_user_managers.py  0006_alter_user_managers.py  0007_alter_user_managers.py  0008_alter_user_managers.py  0009_alter_user_managers.py  0010_alter_user_managers.py  0011_alter_user_managers.py  0012_alter_user_options_alter_user_managers.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/(home)/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
(+61 files in other folders)
