[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ems"
version = "0.1.0"
description = "An employee management system that encompasses various features for managing companies, departments, and employees."
authors = [
    { name = "Ibrahim Morad", email = "ibrahimmorad31@gmail.com" },
]
readme = "README.md"

dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.14.0",
    "django-environ>=0.11.2"
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120